--- a/test-app/filehashing-graal/pom.xml
+++ b/test-app/filehashing-graal/pom.xml
@@ -19,7 +19,6 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -118,11 +117,6 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>io.minio</groupId>
-			<artifactId>minio</artifactId>
-			<version>8.2.1</version>
-		</dependency>
-		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
@@ -131,6 +125,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.12.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dfrickert</groupId>
+			<artifactId>simpleminioclient</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
