--- a/test-app/filehashing/pom.xml
+++ b/test-app/filehashing/pom.xml
@@ -130,9 +130,9 @@
 			<version>2.8.5</version>
 		</dependency>
 		<dependency>
-			<groupId>io.minio</groupId>
-			<artifactId>minio</artifactId>
-			<version>6.0.11</version>
+			<groupId>com.dfrickert</groupId>
+			<artifactId>simpleminioclient</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
