--- a/test-app/sleep-graal/pom.xml
+++ b/test-app/sleep-graal/pom.xml
@@ -4,10 +4,10 @@
 	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>pt.ulisboa.ist</groupId>
+	<groupId>ch.ethz.systems</groupId>
 	<packaging>jar</packaging>
 	<version>0.0.1</version>
-	<artifactId>faas-graalvm-filehashing</artifactId>
+	<artifactId>photons-java-sleep</artifactId>
 
 	<repositories>
 		<repository>
@@ -19,6 +19,7 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -38,9 +39,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<java.version>11</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<build>
@@ -76,9 +77,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
-					<release>11</release>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -102,11 +102,11 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<finalName>filehashing</finalName>
+							<finalName>sleep</finalName>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>ch.ethz.systems.FileHashing</mainClass>
+									<mainClass>ch.ethz.systems.Sleep</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -115,21 +115,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 	<dependencies>
 		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.12.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.dfrickert</groupId>
-			<artifactId>simpleminioclient</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 	</dependencies>
 </project>
