--- a/test-app/graal/iconify-graal/pom.xml
+++ b/test-app/graal/iconify-graal/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="https://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,8 +12,8 @@
 
 	<groupId>pt.ulisboa.ist</groupId>
 	<packaging>jar</packaging>
-	<version>0.0.1</version>
-	<artifactId>faas-graalvm-image-classifier</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>faas-graalvm-iconify</artifactId>
 
 	<repositories>
 		<repository>
@@ -26,7 +27,6 @@
 		</repository>
 
 	</repositories>
-
 	<pluginRepositories>
 		<pluginRepository>
 			<id>central</id>
@@ -48,7 +48,6 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<java.version>11</java.version>
-		<graalvm.version>21.1.0</graalvm.version>
 	</properties>
 
 	<build>
@@ -109,11 +108,11 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<finalName>image-classifier</finalName>
+							<finalName>video</finalName>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>ch.ethz.systems.InceptionImageClassifierDemo</mainClass>
+									<mainClass>ch.ethz.systems.FFMPEG</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -125,61 +124,6 @@
 
 
 	<dependencies>
-		<!-- GraalVM -->
-
-		<dependency>
-			<groupId>org.graalvm.sdk</groupId>
-			<artifactId>graal-sdk</artifactId>
-			<version>${graalvm.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.graalvm.nativeimage</groupId>
-			<artifactId>svm</artifactId>
-			<version>${graalvm.version}</version>
-			<scope>provided</scope>
-		</dependency>
-
-        <dependency>
-            <groupId>ai.djl</groupId>
-            <artifactId>api</artifactId>
-            <version>0.12.0</version>
-        </dependency>
-		<dependency>
-			<groupId>org.bytedeco</groupId>
-			<artifactId>javacpp</artifactId>
-			<!-- Only 1.5.4 works with GraalVM -->
-			<version>1.5.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>3.8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>ai.djl.tensorflow</groupId>
-			<artifactId>tensorflow-engine</artifactId>
-			<version>0.12.0</version>
-		</dependency>
-		<dependency>
-			<groupId>ai.djl.tensorflow</groupId>
-			<artifactId>tensorflow-model-zoo</artifactId>
-			<version>0.12.0</version>
-		</dependency>
-		<dependency>
-			<groupId>ai.djl.tensorflow</groupId>
-			<artifactId>tensorflow-native-cpu</artifactId>
-			<classifier>linux-x86_64</classifier>
-			<scope>runtime</scope>
-			<version>2.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna</artifactId>
-			<version>5.8.0</version>
-		</dependency>
-
-
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -193,8 +137,13 @@
 		<dependency>
 			<groupId>com.dfrickert</groupId>
 			<artifactId>simpleminioclient</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.bramp.ffmpeg</groupId>
+			<artifactId>ffmpeg</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
