--- a/test-app/java/video/pom.xml
+++ b/test-app/java/video/pom.xml
@@ -117,13 +117,13 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
+			<version>2.8.9</version>
 		</dependency>
 
 		<dependency>
-			<groupId>io.minio</groupId>
-			<artifactId>minio</artifactId>
-			<version>6.0.11</version>
+			<groupId>com.dfrickert</groupId>
+			<artifactId>simpleminioclient</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
